# SO

./: CMakeLists.txt  aux.c  generalfunctions.c  generalfunctions.h  includes.h  lista.c  lista.h  listaficheros.c  listaficheros.h  listamemoria.c  listamemoria.h  listaprocesos.c  listaprocesos.h  makefile  p0  p0.c  p0.h  p1.c  p1.h  p2  p2.c  p2.h  p3  p3.c  p3.h  types.h  valgrind-report.txt
tets/: as.txt
tets/Hola/: .hidden
